<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChatActivity">

    <ScrollView
        android:id="@+id/scrollSpace_chatRoom"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:background="@color/colorDarkBlue"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:id="@+id/chatSpace"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorDarkBlue"
            android:orientation="vertical">

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="top"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/BackButton_charRoom"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:onClick="onBackButton_chatRoom"
            android:text="@string/back" />

        <TextView
            android:id="@+id/nameOfRoom"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1.2"
            android:text="RoomName"
            android:textAlignment="center"
            android:textSize="26dp" />

        <Button
            android:id="@+id/deleteRoomButton_chat"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2.2"
            android:onClick="onDeleteRoomButtonClick"
            android:text="@string/delete"
            android:visibility="gone"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="bottom"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <EditText
            android:id="@+id/messageEdit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/enter_your_message"
            android:singleLine="true"
            />

        <Button
            android:id="@+id/sendMessageButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:onClick="onSendMessageButton_chatRoom"
            android:text="@string/send" />

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>