<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/create_Room_Dialog"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorLightBlue"
    android:layout_marginLeft="30dp"
    android:layout_marginRight="30dp"
    android:layout_marginTop="00dp"
    android:layout_marginBottom="00dp"
    android:layout_gravity="center"
    >
    <!--
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="@string/create_room"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:textAlignment="center"
        />
    -->
    <EditText
        android:id="@+id/name_of_room_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/hint_name_of_room"
        android:singleLine="true"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        />

    <CheckBox
        android:id="@+id/add_password_checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activate_password_for_room"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="0dp"
        android:textSize="17sp"
        />

    <EditText
        android:id="@+id/password_of_room_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/password"
        android:singleLine="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="10dp"
        android:inputType="textPassword"
        android:visibility="gone"
        />

    <!--
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:text="@string/creating_room_button"
        android:textSize="17sp"
        android:background="@drawable/opponent_message_style"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="10dp"
        android:text="@string/cancel"
        android:textSize="17sp"
        android:background="@drawable/opponent_message_style"
        android:backgroundTint="@color/colorDarkBlue"
        />
     -->
</LinearLayout>